# pylandsat

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: publish-to-pypi.yml  test-package.yml
pylandsat/: __init__.py  bands.json  catalog.py  cli.py  database.py  download.py  files.json  preprocessing.py  queries.py  scene.py  utils.py
tests/: test_download.py  test_scene.py  test_utils.py
tests/data/: sample.txt
tests/data/LT05_01_030_025_LT05_L1GS_030025_19860927_20161003_01_T2/: LT05_L1GS_030025_19860927_20161003_01_T2_MTL.txt
