[tool.poetry]
name = "pylandsat"
version = "0.6.0"
description = "Search, download and preprocess Landsat imagery"
authors = ["Yann Forget <yannforget@mailbox.org>"]
maintainers = ["Yann Forget <yannforget@mailbox.org>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/yannforget/pylandsat"
repository = "https://github.com/yannforget/pylandsat"
documentation = "https://github.com/yannforget/pylandsat"
keywords = [
    "earth observation",
    "remote sesing",
    "GIS",
    "satellite imagery",
    "landsat"
]

[tool.poetry.dependencies]
python = "^3.6"
click = "*"
appdirs = "*"
requests = "^2.20"
fiona = "*"
shapely = "*"
tqdm = "*"
numpy = "*"
rasterio = "^1.0"
geopy = "*"
python-dateutil = "*"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
pytest-cov = "^2.11"

[tool.poetry.scripts]
pylandsat = "pylandsat.cli:cli"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 88
