[metadata]
name = pylandsat
version = 0.5
url = https://github.com/yannforget/pylandsat
author = Yann Forget
author_email = yannforget@mailbox.org
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: GIS
keywords = earth observation, gis, remote sensing, landsat
description = Search, download and preprocess Landsat imagery
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >=3.5
packages = 
    pylandsat
include_package_data = True
install_requires =
    click
    appdirs
    requests
    fiona
    shapely
    tqdm
    numpy
    rasterio
    geopy

[options.entry_points]
console_scripts =
    pylandsat = pylandsat.cli:cli
